# fontconfig-ultimate

./: README.pod
2.10.92-2.4.11/conf.d.infinality/: 88-forced-synthetic.conf
infinality-bundle-src/: CHANGELOG  README  README.html  fonts.conf.in.diff  links.diff
infinality-bundle-src/2.10.92/patches/: 03-Makefile.in.patch
infinality-bundle-src/2.10.93-2.5.0.1/: 37-repl-global.conf
infinality-bundle-src/2.10.93-2.5.0.1/conf.d.infinality/: 92-selective-rendering.conf  Makefile.am  Makefile.in
infinality-bundle-src/2.10.93-2.5.0.1/freetype/: infinality-settings.sh
infinality-bundle-src/2.10.93/conf.d.infinality/: 92-selective-rendering.conf
infinality-bundle-src/2.10.93/freetype/: infinality-settings.sh
infinality-bundle-src/2.10.95-2.1-2.5.0.1-5/conf.d.infinality/: 60-latin.conf  92-selective-rendering.conf  Makefile.in
infinality-bundle-src/2.10.95-2.1-2.5.0.1-5/fontconfig_patches/: fc-presets
infinality-bundle-src/2.10.95-3.1-2.5.0.1-5/conf.d.infinality/: 37-repl-global.conf
infinality-bundle-src/2.10.95-3.1-2.5.0.1-5/fontconfig_patches/free/: less
infinality-bundle-src/2.10.95-3.2-2.5.0.1-5/freetype/: infinality-settings.sh
infinality-bundle-src/2.11.0-2.1-2.5.0.1-5/conf.d.infinality/: Makefile.am  Makefile.in  README.in
infinality-bundle-src/2.11.0-2.1-2.5.0.1-5/fontconfig_patches/: 02-configure.ac.patch  03-Makefile.in.patch  04-Makefile.conf.d.patch
infinality-bundle-src/2.11.0-3-2.5.0.1-7/conf.d.infinality/: 90-tt-fonts.conf
infinality-bundle-src/2.11.0-3-2.5.0.1-7/fontconfig_patches/free/: 37-repl-global-free.conf
infinality-bundle-src/2.11.0-4-2.5.0.1-7/conf.d.infinality/: 90-non-tt-fonts.conf  92-selective-rendering.conf  93-final-lang-spec.conf
infinality-bundle-src/2.11.0-5-2.5.0.1-7/conf.d.infinality/: 90-non-tt-fonts.conf
infinality-bundle-src/2.11.0-5-2.5.0.1-7/doc/fontconfig-infinality-ultimate/: CHANGELOG
infinality-bundle-src/2.11.0-5-2.5.0.1-7/fontconfig_patches/free/: 37-repl-global-free.conf
infinality-bundle-src/2.11.0-5-2.5.0.1-8/conf.d.infinality/: 90-non-tt-fonts.conf  90-tt-fonts.conf
infinality-bundle-src/conf.avail.infinality/: 10-base-rendering.conf  15-tt-monospace-fonts.conf  21-tt-rendering.conf  22-tt-monospace-rendering.conf  30-non-latin.conf  30-non-tt-fonts.conf  30-tt-fonts.conf  30-tt-monospace-fonts.conf  40-nonlatin.conf  42-repl-global.conf  45-latin.conf  52-infinality.conf  60-group-non-tt-fonts.conf  60-group-tt-fonts.conf  60-latin.conf  62-tt-monospace-rendering.conf  65-non-latin.conf  68-aliases-default-custom.conf  68-aliases-default.conf  70-bitmaps.conf  71-postscript.conf  80-selective-rendering.conf  81-final-lang-spec.conf  81-final-rendering.conf  82-final-lang-spec.conf  92-selective-rendering.conf  93-final-lang-spec.conf  95-reject.conf  Makefile.am  Makefile.in
infinality-bundle-src/fontconfig/: README  fonts.conf
infinality-bundle-src/fontconfig/conf.avail/: 42-repl-helvetica.conf  42-repl-template.conf  95-reject-freefont.conf
infinality-bundle-src/fontconfig/conf.d/: 42-repl-helvetica.conf
infinality-bundle-src/freetype/: infinality-settings.sh
infinality-bundle-src/patches/: 00-fonts.conf.in.patch  01-configure.patch  02-configure.ac.patch  03-Makefile.in.patch
